Minor doc update (hacker's guide).

--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-16 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Minor doc update (hacker's guide).
+
 2012-11-15 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added color-handicap profile options, not implemented yet.
