--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -1075,6 +1075,32 @@ Wrapper on lw6pil_slow_down.
 Wrapper on lw6pil_speed_up.
 @end deffn
 
+@subsection c-lw6pil-suite-get-checkpoint
+@deffn {C function exported to Guile} @code{c-lw6pil-suite-get-checkpoint}
+Wrapper on lw6pil_suite_get_checkpoint.
+@end deffn
+
+@subsection c-lw6pil-suite-get-commands-by-node-index
+@deffn {C function exported to Guile} @code{c-lw6pil-suite-get-commands-by-node-index}
+Wrapper on lw6pil_suite_get_command_by_node_index, returns the list of all
+steps.
+@end deffn
+
+@subsection c-lw6pil-suite-get-commands-by-stage
+@deffn {C function exported to Guile} @code{c-lw6pil-suite-get-commands-by-stage}
+Wrapper on lw6pil_suite_get_command_by_stage, returns the list of all steps.
+@end deffn
+
+@subsection c-lw6pil-suite-get-seq-0
+@deffn {C function exported to Guile} @code{c-lw6pil-suite-get-seq-0}
+Wrapper on lw6pil_suite_get_seq_0.
+@end deffn
+
+@subsection c-lw6pil-suite-init
+@deffn {C function exported to Guile} @code{c-lw6pil-suite-init}
+Wrapper on lw6pil_suite_init.
+@end deffn
+
 @subsection c-lw6pil-sync-from-backup
 @deffn {C function exported to Guile} @code{c-lw6pil-sync-from-backup}
 Wrapper on lw6pil_sync_from_backup.
