--- a/liquidwar6/doc/pil-gdoc.texi
+++ b/liquidwar6/doc/pil-gdoc.texi
@@ -643,14 +643,8 @@ random, this way this is one less bug to check in networked context.
 @strong{Return value:}  random integer value, always greater than INT_MAX
 @end deftypefun
 
-@deftypefun {int} {lw6pil_suite_init} (lw6map_level_t ** @var{level}, lw6ker_game_struct_t ** @var{game_struct}, lw6ker_game_state_t ** @var{game_state}, lw6pil_pilot_t ** @var{pilot}, int64_t @var{timestamp})
-@var{level}:  level to run test suite (out param)
-
-@var{game_struct}:  game struct to run test suite (out param)
-
-@var{game_state}:  game state to run test suite (out param)
-
-@var{pilot}:  pilot to run test suite (out param)
+@deftypefun {int} {lw6pil_suite_init} (lw6pil_dump_t * @var{dump}, int64_t @var{timestamp})
+@var{dump}:  dump to use as a base to init the suite (out param)
 
 @var{timestamp}:  timestamp used for pilot creation (should be "now")
 
@@ -700,8 +694,8 @@ Messages from various nodes and stages are mixed and sorted.
 @strong{Return value:}  static string, must not be freed.
 @end deftypefun
 
-@deftypefun {void} {lw6pil_suite_get_checkpoint} (u_int32_t * @var{checksum}, int64_t * @var{seq}, int * @var{round}, int @var{stage})
-@var{checksum}:  expected checksum for the given checkpoint (out param)
+@deftypefun {void} {lw6pil_suite_get_checkpoint} (u_int32_t * @var{game_state_checksum}, int64_t * @var{seq}, int * @var{round}, int @var{stage})
+@var{game_state_checksum}:  expected checksum for the given checkpoint (out param)
 
 @var{seq}:  expected seq for the given checkpoint (out param)
 
