--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-11-27 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Started doc about core algorithm
+
 2012-11-22 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Made lw6pil_suite functions available from scripts.
