--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2012-12-07 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added support for Doxygen dependency graphs generation.
+
 	* P2p node creation now takes ID as a param.
 
 2012-11-28 : Christian Mauduit <ufoot@ufoot.org>
