--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-08 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Updated jenkins script so that it generates doc on the fly.
+
 2012-12-07 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Added support for Doxygen dependency graphs generation.
