--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,5 +1,7 @@
 2012-12-08 : Christian Mauduit <ufoot@ufoot.org>
 
+	* Added gendocs.sh utility to generate official docs automatically.
+
 	* Updated jenkins script so that it generates doc on the fly.
 
 2012-12-07 : Christian Mauduit <ufoot@ufoot.org>
