Created libgen module, to host pseudo-random map generation code.

--- a/liquidwar6/doc/funcs-selfdoc.texi
+++ b/liquidwar6/doc/funcs-selfdoc.texi
@@ -170,6 +170,11 @@ Wrapper on lw6dsp_release.
 Wrapper on lw6dsp_update.
 @end deffn
 
+@subsection c-lw6gen-create-from-seed
+@deffn {C function exported to Guile} @code{c-lw6gen-create-from-seed}
+Wrapper on lw6gen_create_from_seed.
+@end deffn
+
 @subsection c-lw6gfx-get-backends
 @deffn {C function exported to Guile} @code{c-lw6gfx-get-backends}
 Wrapper on lw6gfx_get_backends.
