--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-13 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Created libgen module, to host pseudo-random map generation code.
+
 2012-12-11 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Basic libcaca initialization.
