--- a/liquidwar6/doc/liquidwar6-gdoc.texi
+++ b/liquidwar6/doc/liquidwar6-gdoc.texi
@@ -116,6 +116,13 @@ Register the functions of the dsp module, make them callable from Guile.
 @strong{Return value:}  1 on success, 0 if failed.
 @end deftypefun
 
+@deftypefun {int} {lw6_register_funcs_gen} ()
+
+Register the functions of the gen module, make them callable from Guile.
+
+@strong{Return value:}  1 on success, 0 if failed.
+@end deftypefun
+
 @deftypefun {int} {lw6_register_funcs_gfx} ()
 
 Register the functions of the gfx module, make them callable from Guile.
