--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-15 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Added utility functions to generate and normalize pseudo-random seeds.
+
 2012-12-14 : Christian Mauduit <ufoot@ufoot.org>
 
 	* It's possible to call the pseudo-random map generation hook from menu.
