--- a/liquidwar6/ChangeLog
+++ b/liquidwar6/ChangeLog
@@ -1,3 +1,7 @@
+2012-12-16 : Christian Mauduit <ufoot@ufoot.org>
+
+	* Fixed lw6pil round to seq conversion bug.
+
 2012-12-15 : Christian Mauduit <ufoot@ufoot.org>
 
 	* Fixed libcaca wrapping.
